# RunAI

./: .gitignore  Dockerfile  Makefile  README.md  app.py  config.yaml  plan.md  pyproject.toml  rank.py  requirements.txt  submission.xlsx  submission_metadata.yaml
Docs/: 00_INDEX.md  01_PRD.md  02_Challenge_Brief.md  03_Data_Dictionary.md  04_Submission_Requirements.md  05_Evaluation_and_Scoring.md  06_Traps_and_Honeypots.md  07_Architecture.md  08_M1_Findings.md  09_Build_Log.md  10_Results.md  11_Ablation.md
scripts/: ablation.py  explore.py
src/: __init__.py  config.py  embeddings.py  features.py  graph.py  ingest.py  jd.py  pipeline.py  precompute.py  reasoning.py  score.py
