[project]
name = "redrob-ranker"
version = "0.1.0"
description = "Intelligent candidate discovery & ranking for the Redrob hackathon"
readme = "README.md"
requires-python = ">=3.11,<3.12"

# Core dependencies needed for ingest, structured features, graph, ranking.
dependencies = [
    "numpy==1.26.4",
    "pandas==2.2.2",
    "pyyaml==6.0.1",
    "pyarrow==16.1.0",
    "networkx==3.3",
]

[project.optional-dependencies]
# Heavy ML deps — installed from M3 onward (embeddings/relevance).
ml = [
    "sentence-transformers==2.7.0",
    "torch==2.2.2",
    "huggingface-hub==0.23.0",
    "faiss-cpu==1.8.0",
]
# Streamlit demo / sandbox — installed at M7.
demo = [
    "streamlit==1.35.0",
    "plotly==5.22.0",
    "pyvis==0.3.2",
]

[tool.uv]
# Keep the lockfile reproducible for Stage-3.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
